<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/signup_cover_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:contentDescription="Cover Image when signup"
        android:src="@drawable/pexels_photo_cover3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_cover_image"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TẠO TÀI KHOẢN SALON"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp">

            <EditText
                android:id="@+id/signup_fullname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:textSize="16dp"
                android:text="muadong"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp">
            <EditText
                android:id="@+id/signup_salonname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salon_name"
                android:text="muadong"
                android:textSize="16dp"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text="nhi@gmail.com"
                android:textSize="16dp"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp">
            <EditText
                android:id="@+id/signup_phone_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:text="0123456789"
                android:textSize="16dp"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp">
            <EditText
                android:id="@+id/signup_password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="123"
                android:textSize="16dp"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/signup_activity_create_first_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_effect"
            android:stateListAnimator="@drawable/click_effect"
            android:text="@string/vn_register"
            android:textColor="@color/lightTextColor"
            android:textSize="@dimen/text_size_button_match_parent"
            android:textStyle="bold"
            android:onClick="signupStepOne"/>
    </LinearLayout>

</LinearLayout>